2004-09-09  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-generic_sets.ads, aws-net-generic_sets.adb:
	(Waiting_Mode): Add None waiting mode.
	(Socket_Count): New type.
	(Socket_Index): Subtype of Socket_Count.

2004-09-08  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-generic_sets.ads, aws-net-generic_sets.adb:
	(Is_Read_Ready): Former Could_Read.
	(Is_Write_Ready): Former Could_Write.

	* aws-net-generic_sets.ads:
	(Waiting_Mode): New Error waiting mode.

	* aws-net-generic_sets.adb:
	(Add_Private): Take care about Error waiting mode.

2004-09-07  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-sets.adb:
	(Finalize): Call Reset for Free internally allocated sockets.

	* aws-net-generic_sets.ads, aws-net-generic_sets.adb:
	New generic package.

	* makefile:
	Add aws-net-generic_sets.adb.

2004-09-04  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-sets-thin.ads:
	Renamed to aws-net-thin.ads.

	* aws-net-thin.ads:
	New package.

	* aws-net.adb, aws-net-sets.adb, makefile:
	Use AWS.Net.Thin instead of AWS.Net.Sets.Thin.

2004-09-02  Pascal Obry  <pascal@obry.org>

	* templates_parser.adb:
	Fix to new AI302 container Is_In prototype.

	* aws-session.adb:
	Fix to new AI302 container Is_In prototype.

	* aws-resources-embedded.adb:
	Fix to new AI302 container Is_In prototype.

	* aws-containers-tables.adb:
	Fix to new AI302 container Is_In prototype.

2004-08-27  Pascal Obry  <obry@act-europe.fr>

	* aws-server.ads:
	Rename Loose_Release to Release_Deferred.

	* aws-server.adb:
	(Release): Update comment.
	Rename Loose_Release to Release_Deferred.
	Minor reformatting.

2004-08-27  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-buffered.adb:
	(Read): Reset First after Receive. It guarantee empty buffer after
	 timeout.

2004-08-27  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-buffered.adb:
	(Read): Set Last to First - 1. If timeout would be occured in the next
	 call, buffer remain empty.
